# criterion-xml-example

./: meson.build
test/: meson.build
test/src/: example_test.c
